--- a/views/layout.erb
+++ b/views/layout.erb
@@ -39,6 +39,12 @@
 			      <li><a href="/something">Something</a></li>
 			      <li><a href="/contacts">Contacts</a></li>
 			    </ul>
+			<ul class="nav navbar-nav navbar-right">
+                        <form action ='/basket' method= 'POST'>
+  			<input id = "order" type = "text">
+			<button type="button" id="basket" class="btn btn-info btn-lg">Корзина</button>
+			</form>
+			</ul>
 			  </div><!--/.nav-collapse -->
 			</nav>
 
