--- a/views/layout.erb
+++ b/views/layout.erb
@@ -35,14 +35,14 @@
 			  </div>
 			  <div class="navbar-collapse collapse">
 			    <ul class="nav navbar-nav">
-			      <li><a href="/">Home</a></li>
-			      <li><a href="/something">Something</a></li>
+			      <li><a href="/">Главная</a></li>
+			      <li><a href="/basket">Корзина</a></li>
 			      <li><a href="/contacts">Contacts</a></li>
 			    </ul>
 			<ul class="nav navbar-nav navbar-right">
                         <form action ='/basket' method= 'POST'>
-  			<input id = "order" type = "text">
-			<button type="button" id="basket" class="btn btn-info btn-lg">Корзина</button>
+  			<input name = 'orders' id = "order" type = "text">
+			<button type="submit" id="basket" class="btn btn-info btn-lg">Корзина</button>
 			</form>
 			</ul>
 			  </div><!--/.nav-collapse -->
@@ -57,6 +57,11 @@
 
 	</div>
 
-
   </body>
+<script type="text/javascript">
+$(function(){
+upd_cnt();
+upd_order();
+});
+</script>
 </html>
