--- a/views/basket.erb
+++ b/views/basket.erb
@@ -1,4 +1,38 @@
 <h2>Список заказов:</h2>
-<% @hh.each do |order| %>
-<p><%= order %></p>
-<% end %>
+
+<table class = 'table table-striped'>
+<thead>
+	<tr>
+	<th>Название</th>
+	<th>Цена</th>
+	<th>Количество</th>
+	</tr>
+</thead>
+<tbody>
+	<% sum=0 %>
+	<% cnt=0 %>
+
+<% @orders.each do |order| %>
+	<tr>
+	<td><%= order[0].title %></td>
+	<td><%= order[0].price %></td>
+	<td><%= order[1] %></td>
+	</tr>
+
+	<% sum += order[0].price * order[1].to_i%>
+	<% cnt += order[1].to_i%>
+
+
+<% end%>
+
+	<tr>
+	<td>Итог:</td>
+	<td><%= sum %></td>
+	<td><%= cnt %></td>
+	</tr>
+
+
+
+</tbody>
+
+</table>
