--- a/views/layout.erb
+++ b/views/layout.erb
@@ -41,8 +41,8 @@
 			    </ul>
 			<ul class="nav navbar-nav navbar-right">
                         <form action ='/basket' method= 'POST'>
-  			<input name = 'orders' id = "order" type = "text">
-			<button type="submit" id="basket" class="btn btn-info btn-lg">Корзина</button>
+  			<input name = 'orders' id = "order" type = "hidden">
+			<button type="submit" id="basket" style="border: none; padding-top: 10px; background-color: #F8F8F8; font-size: 22px">Корзина</button>
 			</form>
 			</ul>
 			  </div><!--/.nav-collapse -->
