--- a/views/layout.erb
+++ b/views/layout.erb
@@ -36,7 +36,7 @@
 			  <div class="navbar-collapse collapse">
 			    <ul class="nav navbar-nav">
 			      <li><a href="/">Главная</a></li>
-			      <li><a href="/basket">Корзина</a></li>
+			      <li><a href="/admin">Список заказов</a></li>
 			      <li><a href="/contacts">Contacts</a></li>
 			    </ul>
 			<ul class="nav navbar-nav navbar-right">
